--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "next": "15.2.4",
     "next-themes": "latest",
     "react": "^19",
-    "react-day-picker": "^9.6.7",
+    "react-day-picker": "latest",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
@@ -56,9 +56,9 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "latest",
-    "vaul": "^1.1.2",
-    "zod": "^3.24.1"
+    "vaul": "latest",
+    "zod": "^3.24.1",
+    "uuid": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
